--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile files('libs/apache-mime4j-0.6.jar')
     compile files('libs/volley.jar')
@@ -74,27 +74,26 @@ dependencies {
     compile 'com.kbeanie:image-chooser-library:1.5.8@aar'
     compile project(':libraries:ResideMenu')
     compile 'de.hdodenhof:circleimageview:2.1.0'
-
     compile('com.crashlytics.sdk.android:crashlytics:2.6.2@aar') {
         transitive = true;
     }
     compile('com.twitter.sdk.android:twitter:1.12.1@aar') {
         transitive = true;
     }
-
-    compile ('com.android.support:support-v4:23.1.1'){
+    compile('com.android.support:support-v4:23.1.1') {
         force = true;
     }
-    compile ('com.android.support:appcompat-v7:23.1.1'){
+    compile('com.android.support:appcompat-v7:23.1.1') {
         force = true;
     }
-    compile ('com.android.support:design:23.1.1'){
+    compile('com.android.support:design:23.1.1') {
         force = true;
     }
-    compile ('com.android.support:cardview-v7:23.1.1'){
+    compile('com.android.support:cardview-v7:23.1.1') {
         force = true;
     }
-    compile ('com.android.support:recyclerview-v7:23.1.1'){
+    compile('com.android.support:recyclerview-v7:23.1.1') {
         force = true;
     }
+    compile files('libs/android_permission.jar')
 }
