--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,12 +45,12 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-     <!--   <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_api_key" />-->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDl4-3uA9fo6d3Lk0-XvqLFftHphkWfNE8" />
+            android:value="@string/google_api_key" />
+        <!--<meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDl4-3uA9fo6d3Lk0-XvqLFftHphkWfNE8" />-->
         <activity
             android:name=".activities.homemodule.SplashActivity"
             android:label="@string/app_name"
